# Classbot

./: Cargo.toml  Prezentatsia_1 (1).pptx  README.md  readme.md  requirements.txt
src/: data.py  functions.py  game.py  get.py  main.py  main.rs  query.py  reminders.py  set.py  topsecret.py
