[package]
name = "classbot"
version = "0.0.0"
authors = ["JavaharlalNehru <javaharlalnehru@yandex.ru>"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/JavaharlalN/Classbot"

[dependencies]
vkapi = { git = "https://github.com/TheRadioGuy/vk_api.git" }
tokio ={ version = "1.20.1", features = ["full"] }
serde_json = "1.0.53"
futures = "0.3"